txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -149,5 +149,9 @@ This is Hölder’s inequality:
 		\int_S|g||f+g|^{p-1}\dmu\leq\norm{g}_p\norm{f+g}_p^{\frac{p}{q}}
 	\end{equation*}
 	So that
+	\begin{equation*}
+		\norm{f+g}_p^p\leq\norm{f}_p\norm{f+g}_p^{\frac{p}{q}}+\norm{g}_p\norm{f+g}_p^{\frac{p}{q}}.
+	\end{equation*}
+	Dividing by $\norm{f+g}_p^{\frac{p}{q}}$
 \end{fancyproof}
 \end{document}
