txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -152,6 +152,9 @@ This is Hölder’s inequality:
 	\begin{equation*}
 		\norm{f+g}_p^p\leq\norm{f}_p\norm{f+g}_p^{\frac{p}{q}}+\norm{g}_p\norm{f+g}_p^{\frac{p}{q}}.
 	\end{equation*}
-	Dividing by $\norm{f+g}_p^{\frac{p}{q}}$
+	Dividing by $\norm{f+g}_p^{\frac{p}{q}}\neq0$ (otherwise the proof is trivial) we get
+	\begin{equation*}
+		\norm{f+g}_p^{\overbrace{p-\frac{p}{q}}^{1}}\leq\norm{f}_p+\norm{g}_p
+	\end{equation*}
 \end{fancyproof}
 \end{document}
