txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -154,7 +154,7 @@ This is Hölder’s inequality:
 	\end{equation*}
 	Dividing by $\norm{f+g}_p^{\frac{p}{q}}\neq0$ (otherwise the proof is trivial) we get
 	\begin{equation*}
-		\norm{f+g}_p^{\overbrace{p-\frac{p}{q}}^{1}}\leq\norm{f}_p+\norm{g}_p
+		\norm{f+g}_p^{p-\frac{p}{q}}^{1}}\leq\norm{f}_p+\norm{g}_p
 	\end{equation*}
 \end{fancyproof}
 \end{document}
