--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -398,6 +398,7 @@
 		\newtcolorbox{stripbox}{
 			enhanced,
 			sharp corners,
+			breakable,
 			frame code={},
 			interior titled code={
 				\path[
