txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -403,6 +403,7 @@
 				\path[
 				draw=white,
 				sharp corners,
+				breakable,
 				pattern=custom north east lines,
 				hatchspread=12pt,
 				hatchthickness=4pt,
