txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -396,8 +396,9 @@
 		}
 		
 		\newtcolorbox{stripbox}{
-			enhanced,
+			enhanced jigsaw,
 			sharp corners,
+			breakable=true,
 			frame code={},
 			interior titled code={
 				\path[
