txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -396,7 +396,7 @@
 		}
 		
 		\newtcolorbox{stripbox}{
-			jigsaw,
+			enhanced standard jigsaw,
 			sharp corners,
 			breakable=true,
 			interior titled code={
