txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -28,7 +28,7 @@
 \usepackage{pdfpages}
 %\usepackage[px]{sfmath}
 %\usepackage{tipa} %perchè si stai zitto 
-\usepackage{minted}
+%\usepackage{minted}
 \usepackage{mleftright}
 \usepackage{fancybox}
 \usepackage{standalone}
