txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -91,8 +91,8 @@
 	}
 
 	
-	\newminted{python}{mathescape, linenos, numbersep=5pt, frame=single, breaklines,bgcolor=gray!9, fontfamily=courier,python3,rulecolor=red!39!black,numbersep=5pt,label=Python,xleftmargin=0pt}
-		\newenvironment{py}{\VerbatimEnvironment\begin{pythoncode}}{\end{pythoncode}}
+%	\newminted{python}{mathescape, linenos, numbersep=5pt, frame=single, breaklines,bgcolor=gray!9, fontfamily=courier,python3,rulecolor=red!39!black,numbersep=5pt,label=Python,xleftmargin=0pt}
+	%	\newenvironment{py}{\VerbatimEnvironment\begin{pythoncode}}{\end{pythoncode}}
 			
 	\newcounter{defi}
 	
