txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -157,5 +157,7 @@ This is Hölder’s inequality:
 		\norm{f+g}_p^{p-\frac{p}{q}}\leq\norm{f}_p+\norm{g}_p.
 	\end{equation*}
 \end{fancyproof}
-\
+\begin{proposition}
+	Let $(\Omega,\F,\pr)$
+\end{proposition}
 \end{document}
