txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -158,6 +158,9 @@ This is Hölder’s inequality:
 	\end{equation*}
 \end{fancyproof}
 \begin{proposition}
-	Let $(\Omega,\F,\pr)$
+	Let $(\Omega,\F,\pr)$ be a probability triplet. then the following holds:
+	\begin{equation*}
+		L^{\infty}(\Omega,\F,\pr)\subset\Lp(\Omega,\F,\pr)\subset\Lq()
+	\end{equation*}
 \end{proposition}
 \end{document}
