txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -160,7 +160,7 @@ This is Hölder’s inequality:
 \begin{proposition}
 	Let $(\Omega,\F,\pr)$ be a probability triplet. then the following holds:
 	\begin{equation*}
-		L^{\infty}(\Omega,\F,\pr)\subset\Lp(\Omega,\F,\pr)\subset\Lq()
+		L^{\infty}(\Omega,\F,\pr)\subset\Lp(\Omega,\F,\pr)\subset\Lq(\Omega,\F,\pr)\subset
 	\end{equation*}
 \end{proposition}
 \end{document}
