txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -163,4 +163,5 @@ This is Hölder’s inequality:
 		L^{\infty}(\Omega,\F,\pr)\subset\Lp(\Omega,\F,\pr)\subset\Lq(\Omega,\F,\pr)\subset\Lone(\Omega,\F,\pr).
 	\end{equation*}
 \end{proposition}
+Of course , this result remains valid for every other measure space $(S,\Es,\mu)$
 \end{document}
