txs auto checkin

--- a/ANB/pacco.sty
+++ b/ANB/pacco.sty
@@ -489,6 +489,7 @@
 \newcommand{\HS}{\mathscr{H}}
 \newcommand{\Zn}{\mathscr{Z}}
 \newcommand{\D}{\mathscr{D}}
+\newcommand{\Es}{\mathscr{S}}
 \newcommand{\xbar}{\overline{X}}
 \newcommand{\rbar}{\overline{\R}}
 \newcommand{\ybar}{\overline{Y}}
