txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -163,5 +163,8 @@ This is Hölder’s inequality:
 		L^{\infty}(\Omega,\F,\pr)\subset\Lp(\Omega,\F,\pr)\subset\Lq(\Omega,\F,\pr)\subset\Lone(\Omega,\F,\pr).
 	\end{equation*}
 \end{proposition}
-Of course , this result remains valid for every other measure space $(S,\Es,\mu)$
+Of course , this result remains valid for every other measure space $(S,\Es,\mu)$ as long as $\mu(S)<\infty$. In the special case in which 
+\begin{equation*}
+	S=\N\qquad\F=\mathscr{P}(\N)
+\end{equation*}
 \end{document}
