txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -167,5 +167,5 @@ Of course , this result remains valid for every other measure space $(S,\Es,\mu)
 \begin{equation*}
 	S=\N\qquad\F=\mathscr{P}(\N)
 \end{equation*}
-and
+and $\mu$
 \end{document}
