txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -163,9 +163,9 @@ This is Hölder’s inequality:
 		L^{\infty}(\Omega,\F,\pr)\subset\Lp(\Omega,\F,\pr)\subset\Lq(\Omega,\F,\pr)\subset\Lone(\Omega,\F,\pr).
 	\end{equation*}
 \end{proposition}
-Of course , this result remains valid for every other measure space $(S,\Es,\mu)$ as long as $\mu(S)<\infty$. In the special case in which 
+Of course, this result remains valid for every other measure space $(S,\Es,\mu)$ as long as $\mu(S)<\infty$. In the special case in which 
 \begin{equation*}
 	S=\N\qquad\F=\mathscr{P}(\N)
 \end{equation*}
-and $\mu(A)$ is the counting measure $\mu(A)=\sum_{k\in A}\delta_k(A),A\in\N$
+and $\mu(A)$ is the counting measure $\mu(A)=\sum_{k\in A}\delta_k(A),A\in\N$ then knowinf that 
 \end{document}
