--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -167,6 +167,6 @@ Of course, this result remains valid for every other measure space $(S,\Es,\mu)$
 \begin{equation*}
 	S=\N\qquad\F=\mathscr{P}(\N)
 \end{equation*}
-and $\mu(A)$ is the counting measure $\mu(A)=\sum_{k\in A}\delta_k(A),A\in\N$ then knowing that
+and $\mu(A)$ is the counting measure $\mu(A)=\sum_{k\in A}\delta_k(A),A\in\N$ then knowing that sequences $n\mapsto f(n)$
  
 \end{document}
