txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -165,11 +165,11 @@ This is Hölder’s inequality:
 \end{proposition}
 Of course, this result remains valid for every other measure space $(S,\Es,\mu)$ as long as $\mu(S)<\infty$. In the special case in which 
 \begin{equation*}
-	S=\N\qquad\F=\mathscr{P}(\N)
+	S=\N\qquad\F=\mathcal{P}(\N)
 \end{equation*}
 and $\mu(A)$ is the counting measure $\mu(A)=\sum_{k\in A}\delta_k(A),A\in\N$ then knowing that sequences $n\mapsto f(n)$ can be identified as functions over $\N$ of the type $f:\N\to\R$
 we see that 
 \begin{equation*}
-	\Lone(S,\mu)=\mathfrak{L}
+	\Lone(S,\mu)=\mathscr{L}^1(S,\mu)=\ell^1(\N)=\left\{\mathbf{x}\right\}
 \end{equation*} 
 \end{document}
