txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -170,6 +170,6 @@ Of course, this result remains valid for every other measure space $(S,\Es,\mu)$
 and $\mu(A)$ is the counting measure $\mu(A)=\sum_{k\in A}\delta_k(A),A\in\N$ then knowing that sequences $n\mapsto f(n)$ can be identified as functions over $\N$ of the type $f:\N\to\R$
 we see that 
 \begin{equation*}
-	\Lone(S,\mu)=\mathscr{L}^1(S,\mu)=\ell^1(\N)=\left\{\mathbf{x}={(x_{n})}_{n};\norm{\mathbf{x}}_{1:=\sum_{n=1}^{\infty}|x_n|<\infty}\right\}
+	\Lone(S,\mu)=\mathscr{L}^1(S,\mu)=\ell^1(\N)=\left\{\mathbf{x}={(x_{n})}_{n};\norm{\mathbf{x}}_{1}:=\sum_{n=1}^{\infty}|x_n|<\infty\right\}
 \end{equation*} 
 \end{document}
