txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -172,5 +172,8 @@ we see that
 \begin{equation*}
 	\Lone(S,\mu)=\underbracket{\mathscr{L}^1(S,\mu)}_{\mathclap{\text{actual functions, not equivalence classes}}}=\ell^1(\N)=\left\{\mathbf{x}={(x_{n})}_{n};\norm{\mathbf{x}}_{1}:=\sum_{n=1}^{\infty}|x_n|<\infty\right\}.
 \end{equation*} 
-This means tha
+This means that $\ell^1(\N)$ is a $\Lone$ space for some special choice of $S$ and $\mu$. Since we chose our measure as the counting measure, we get
+\begin{equation*}
+	\int_\N|f(n)|\dmu(n)=\sum_{n=1}^\infty|f(n)|=\sum_{n=1}^\infty|x_n|.
+\end{equation*}
 \end{document}
