txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -176,4 +176,8 @@ This means that $\ell^1(\N)$ is a $\Lone$ space for some special choice of $S$ a
 \begin{equation*}
 	\int_\N|f(n)|\dmu(n)=\sum_{n=1}^\infty|f(n)|=\sum_{n=1}^\infty|x_n|.
 \end{equation*}
+Cool!
+\begin{proposition}
+	:
+\end{proposition}
 \end{document}
