txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -178,6 +178,9 @@ This means that $\ell^1(\N)$ is a $\Lone$ space for some special choice of $S$ a
 \end{equation*}
 Cool!
 \begin{proposition}
-	:
+	Let $p\geq1$ be given. We define the set
+	\begin{equation*}
+		\ell^p(\N)=\left\{\mathbf{x}={(x_{n})}_{n\in\N}\subset\R\text{ such that }\sum_{n=1}^\infty\left|x_n\right|^{p}<\infty\right\}
+	\end{equation*}
 \end{proposition}
 \end{document}
