txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -180,7 +180,12 @@ Cool!
 \begin{proposition}
 	Let $p\geq1$ be given. We define the set
 	\begin{equation*}
-		\ell^p(\N)=\left\{\mathbf{x}={(x_{n})}_{n\in\N}\subset\R\text{ such that }\sum_{n=1}^\infty\left|x_n\right|^{p}<\infty\right\}
+		\ell^p(\N)=\left\{\mathbf{x}={(x_{n})}_{n\in\N}\subset\R\text{ such that }\sum_{n=1}^\infty\left|x_n\right|^{p}<\infty\right\}.
 	\end{equation*}
+	Then, $\ell^p(\N)$ is a vector space. Moreover, if
+	\begin{equation*}
+		\norm{\mathbf{x}}_{p}:=\left(\sum_{n=1}^\infty\left|x_n\right|^p\right)^{\frac{1}{p}}\qquad\every\mathbf{x}={(x_{n})}_{n}\in\ell^p(\N)
+	\end{equation*}
+	then $\left(\ell^p(\N),\right)$
 \end{proposition}
 \end{document}
