txs auto checkin

--- a/ANB/analysisnotes.tex
+++ b/ANB/analysisnotes.tex
@@ -186,6 +186,6 @@ Cool!
 	\begin{equation*}
 		\norm{\mathbf{x}}_{p}:=\left(\sum_{n=1}^\infty\left|x_n\right|^p\right)^{\frac{1}{p}}\qquad\every\mathbf{x}={(x_{n})}_{n}\in\ell^p(\N)
 	\end{equation*}
-	then $\left(\ell^p(\N),\right)$
+	then $\left(\ell^p(\N),\norm{\cdot}_p\right)$ is a normed space.
 \end{proposition}
 \end{document}
